--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-21 17:04+0200\n"
+"POT-Creation-Date: 2025-04-21 19:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -117,6 +117,14 @@ msgstr ""
 #: section/templates/section/no_data.html:28
 msgid "Give it a try right now — it’s simple and even a bit fun!"
 msgstr "¡Pruébalo ahora mismo: es sencillo e incluso un poco divertido!"
+
+#: telegram/handlers/messages/commands.py:21
+msgid "Open the app"
+msgstr "Abre la aplicación"
+
+#: telegram/handlers/messages/commands.py:23
+msgid "Hello"
+msgstr "Hola"
 
 #: templates/i18n.html:5
 msgid "Used currencies"
