--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-21 19:02+0200\n"
+"POT-Creation-Date: 2025-04-22 00:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -118,21 +118,37 @@ msgstr ""
 msgid "Give it a try right now — it’s simple and even a bit fun!"
 msgstr "¡Pruébalo ahora mismo: es sencillo e incluso un poco divertido!"
 
-#: telegram/handlers/messages/commands.py:21
+#: telegram/handlers/callback/language.py:21
+msgid "Choose language"
+msgstr "Elija el idioma"
+
+#: telegram/handlers/callback/language.py:42
+msgid "Language updated"
+msgstr "Idioma actualizado"
+
+#: telegram/handlers/callback/language.py:42
+msgid "Language not updated"
+msgstr "Idioma no actualizado"
+
+#: telegram/handlers/common.py:23
 msgid "Open the app"
 msgstr "Abre la aplicación"
 
-#: telegram/handlers/messages/commands.py:23
+#: telegram/handlers/common.py:24
+msgid "Main page"
+msgstr "Página principal"
+
+#: telegram/handlers/common.py:25 user/models.py:35
+msgid "Language"
+msgstr "Idioma"
+
+#: telegram/handlers/messages/commands.py:20
 msgid "Hello"
 msgstr "Hola"
 
 #: templates/i18n.html:5
 msgid "Used currencies"
 msgstr "Divisas usadas"
-
-#: user/models.py:35
-msgid "Language"
-msgstr "Idioma"
 
 #: user/templates/user/feedback_form.html:3
 msgid "Feedback"
