--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-21 19:01+0200\n"
+"POT-Creation-Date: 2025-04-22 00:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -119,21 +119,37 @@ msgstr ""
 msgid "Give it a try right now — it’s simple and even a bit fun!"
 msgstr "Попробуй прямо сейчас — это просто и даже немного интересно!"
 
-#: telegram/handlers/messages/commands.py:21
+#: telegram/handlers/callback/language.py:21
+msgid "Choose language"
+msgstr "Выбери язык"
+
+#: telegram/handlers/callback/language.py:42
+msgid "Language updated"
+msgstr "Язык обновлен"
+
+#: telegram/handlers/callback/language.py:42
+msgid "Language not updated"
+msgstr "Язык не обновлен"
+
+#: telegram/handlers/common.py:23
 msgid "Open the app"
 msgstr "Открыть приложение"
 
-#: telegram/handlers/messages/commands.py:23
+#: telegram/handlers/common.py:24
+msgid "Main page"
+msgstr "Главная страница"
+
+#: telegram/handlers/common.py:25 user/models.py:35
+msgid "Language"
+msgstr "Язык"
+
+#: telegram/handlers/messages/commands.py:20
 msgid "Hello"
 msgstr "Привет"
 
 #: templates/i18n.html:5
 msgid "Used currencies"
 msgstr "Использованные валюты"
-
-#: user/models.py:35
-msgid "Language"
-msgstr "Язык"
 
 #: user/templates/user/feedback_form.html:3
 msgid "Feedback"
