--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-22 02:11+0200\n"
+"POT-Creation-Date: 2025-04-22 02:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -134,6 +134,14 @@ msgstr "Idioma actualizado"
 msgid "Language not updated"
 msgstr "Idioma no actualizado"
 
+#: telegram/handlers/common.py:22
+msgid "Open the app"
+msgstr "Abre la aplicación"
+
+#: telegram/handlers/common.py:24
+msgid "Main page"
+msgstr "Página principal"
+
 #: telegram/handlers/messages/commands.py:21
 msgid "Hello"
 msgstr "Hola"
@@ -157,9 +165,3 @@ msgstr "Mensaje"
 #: user/templates/user/feedback_form.html:14
 msgid "Send"
 msgstr "Enviar"
-
-#~ msgid "Open the app"
-#~ msgstr "Abre la aplicación"
-
-#~ msgid "Main page"
-#~ msgstr "Página principal"
