--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-22 02:11+0200\n"
+"POT-Creation-Date: 2025-04-22 02:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -136,6 +136,14 @@ msgstr "Мова оновлена"
 msgid "Language not updated"
 msgstr "Мова не оновлена"
 
+#: telegram/handlers/common.py:22
+msgid "Open the app"
+msgstr "Відкрити додаток"
+
+#: telegram/handlers/common.py:24
+msgid "Main page"
+msgstr "Головна сторінка"
+
 #: telegram/handlers/messages/commands.py:21
 msgid "Hello"
 msgstr "Привіт"
@@ -159,9 +167,3 @@ msgstr "Повідомлення"
 #: user/templates/user/feedback_form.html:14
 msgid "Send"
 msgstr "Надіслати"
-
-#~ msgid "Open the app"
-#~ msgstr "Відкрити додаток"
-
-#~ msgid "Main page"
-#~ msgstr "Головна сторінка"
