--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-22 02:26+0200\n"
+"POT-Creation-Date: 2025-04-22 02:55+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -142,17 +142,39 @@ msgstr "Abre la aplicación"
 msgid "Main page"
 msgstr "Página principal"
 
+#: telegram/handlers/common.py:25 user/models.py:35
+msgid "Language"
+msgstr "Idioma"
+
 #: telegram/handlers/messages/commands.py:21
 msgid "Hello"
 msgstr "Hola"
 
+#: telegram/handlers/share/users.py:24
+msgid "You must be the owner of a room to add users to it"
+msgstr "Debes ser el propietario de una sala para añadir usuarios a ella"
+
+#: telegram/handlers/share/users.py:32
+#, python-format
+msgid "Add to room \"%(section_name)s\""
+msgstr "Agregar a la sala \"%(section_name)s\""
+
+#: telegram/handlers/share/users.py:41
+#, python-format
+msgid "Use the button below to add users to the room \"%(section_name)s\""
+msgstr "Usa el botón de abajo para añadir usuarios a la sala \"%(section_name)s\""
+
+#: telegram/handlers/share/users.py:50
+msgid "Room not found, users will not be added. Try again"
+msgstr "Sala no encontrada, los usuarios no serán añadidos. Intenta de nuevo"
+
+#: telegram/handlers/share/users.py:64
+msgid "Users added"
+msgstr "Usuarios añadidos"
+
 #: templates/i18n.html:5
 msgid "Used currencies"
 msgstr "Divisas usadas"
-
-#: user/models.py:35
-msgid "Language"
-msgstr "Idioma"
 
 #: user/templates/user/feedback_form.html:3
 msgid "Feedback"
